bin_PROGRAMS = 	simple_tip

simple_tip_SOURCES = simple_tip.cpp
simple_tip_CPPFLAGS = -I$(top_srcdir)/lib/common/src -I$(top_srcdir)/lib/packet/src -I$(top_srcdir)/lib/user/src 
simple_tip_LDADD = $(top_srcdir)/lib/user/src/libtipuser.la $(top_srcdir)/lib/packet/src/libtippacket.la $(top_srcdir)/lib/common/src/libtipcommon.la 
