lib_LTLIBRARIES = libtippacket.la

libtippacket_la_SOURCES =         \
	packet_buffer.h               \
	rtcp_tip_ack_packet.cpp       \
	rtcp_tip_ack_packet.h         \
	rtcp_tip_mediaopts_packet.cpp \
	rtcp_tip_mediaopts_packet.h   \
	rtcp_tip_muxctrl_packet.cpp   \
	rtcp_tip_muxctrl_packet.h     \
	rtcp_tip_flowctrl_packet.cpp  \
	rtcp_tip_flowctrl_packet.h    \
	rtcp_tip_refresh_packet.cpp   \
	rtcp_tip_refresh_packet.h     \
	rtcp_tip_reqtosend_packet.cpp \
	rtcp_tip_reqtosend_packet.h   \
	rtcp_tip_spimap_packet.cpp    \
	rtcp_tip_spimap_packet.h      \
	rtcp_tip_feedback_packet.cpp  \
	rtcp_tip_feedback_packet.h    \
	rtcp_tip_echo_packet.cpp      \
	rtcp_tip_echo_packet.h        \
	rtcp_tip_notify_packet.cpp    \
	rtcp_tip_notify_packet.h      \
	rtcp_tip_types.cpp            \
	rtcp_tip_types.h              \
	rtcp_packet.cpp               \
	rtcp_packet.h                 \
	rtcp_rr_packet.cpp            \
	rtcp_rr_packet.h              \
	rtcp_sdes_packet.cpp          \
	rtcp_sdes_packet.h            \
	rtcp_packet_factory.cpp       \
	rtcp_packet_factory.h         \
	rtcp_tip_tlv.cpp              \
	rtcp_tip_tlv.h                \
	rtcp_tip_packet_manager.cpp   \
	rtcp_tip_packet_manager.h

AM_CPPFLAGS = -I$(top_srcdir)/lib/common/src

