lib_LTLIBRARIES = libtipuser.la

libtipuser_la_SOURCES =                 \
	tip.h                               \
	tip.cpp                             \
	tip_system.h                        \
	tip_system.cpp                      \
	tip_profile.h                       \
	tip_profile.cpp                     \
	tip_relay.h                         \
	tip_relay.cpp                       \
	tip_media.h                         \
	tip_media.cpp                       \
	tip_media_callback.h                \
	tip_media_callback.cpp              \
	tip_media_option.h                  \
	tip_media_option.cpp                \
	tip_packet_transmit.h               \
	tip_callback.h                      \
	tip_callback.cpp                    \
	private/tip_impl.h                  \
	private/tip_impl.cpp                \
	private/tip_pres_impl.h             \
	private/tip_pres_impl.cpp           \
	private/tip_packet_receiver.h       \
	private/tip_packet_receiver.cpp     \
	private/tip_timer.h                 \
	private/tip_timer.cpp               \
	private/map_tip_system.h            \
	private/map_tip_system.cpp          \
	private/tip_callback_wrapper.h      \
	private/tip_callback_wrapper.cpp    \
	private/tip_negotiate_state.h       \
	private/tip_negotiate_state.cpp     \
	private/tip_pres_negotiate_state.h  \
	private/tip_pres_negotiate_state.cpp

AM_CPPFLAGS = -I$(top_srcdir)/lib/common/src -I$(top_srcdir)/lib/packet/src
